# 2022ESWContest_free_1103

./: .gitignore  README.md
FINAL/ISP_Final/: CMakeLists.txt  ISP_socket.cpp
FINAL/Motor_Final/: Motor_Final.ino
FINAL/Qt_Final/: Makefile  dht11_lx3.h.autosave  mainwidget.h  mainwidget.ui  moc_alarm.cpp  moc_mainwidget.cpp  moc_page_1.cpp  moc_page_2.cpp  moc_page_3.cpp  moc_page_4.cpp  moc_socketclient.cpp  moc_timer.cpp  page_3.cpp  page_3.h  page_3.ui  page_4.h  project  project.pro  project.pro.user.a43fcbd  project.pro.user.db50cd9  socketclient.cpp  temp.db  ui_mainwidget.h  ui_page_1.h  ui_page_2.h  ui_page_3.h  ui_page_4.h
FINAL/Serial_Final/: Motor  main.c  uart.c  uart.h
ISP/: CMakeLists.txt
Motor/: Motor.ino
Mr_Server_jetson/: iot_server.c
Qt/: Makefile  Resources.qrc  mainwidget.cpp  page_1.cpp  page_1.h.autosave  page_1.ui  page_2.h  page_2.ui  page_3.cpp  page_3.h  page_3.ui  page_4.cpp  page_4.ui  project.pro.user.f726358  socketclient.h
